Added Javascript and new HTML to link it
Added Javascript and new HTML to link it all together.

--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
         <button class="btn"> <i class="fas fa-plus"></i></button>
     </div>
 <ul class="toDoList">
-    <li>Buy a laptop  <span><i class="fas fa-trash"></i></span></li>
-    <li>Learn how to code <span><i class="fas fa-trash"></i></span></li>
-    <li>Exercise <span><i class="fas fa-trash"></i></span></li>
+    
 </ul>
 <div class="footer">
-    <span>You have 3 pending tasks</span>
+    <span>You have <span class="pendingNumb"></span> pending task(s)</span>
     <button>Clear All</button>
 </div>
 </div>
+<script src="script.js"></script>
 </body>
 </html>
